--- a/src/components/common/styles/footer.css
+++ b/src/components/common/styles/footer.css
@@ -45,6 +45,15 @@
 	text-align: right;
 }
 
+.btnres{
+	float: left;
+	border-radius: 15%;
+	border: 2px solid black;
+	width: 110px;
+	height: 40px;
+	background-color: white;
+}
+
 @media (max-width: 600px) {
 	.footer {
 		flex-direction: column;
